--- a/Circle Empires Editor.csproj
+++ b/Circle Empires Editor.csproj
@@ -60,6 +60,10 @@
       <HintPath>E:\SteamLibrary\steamapps\common\Circle Empires\Circle Empires_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>E:\SteamLibrary\steamapps\common\Circle Empires\Circle Empires_Data\Managed\UnityEngine.UI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
